# ml-guided-quantum-coarsening

./: README.md  pyproject.toml  requirements.txt
docs/: multilevel-methods.md  quantum-motivation.md  theory.md
experiments/: baseline_vs_ml.py
src/: graph_generation.py  refinement.py
src/coarsening/: classical.py  ml_guided.py
src/quantum/: qaoa_interface.py  qubo.py
tests/: test_coarsening.py
